--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,3 @@
 *.jpg
+#comentario para agregar 
+#si comienza con / es un directorio en caso contrario, usa el nombre o los timpo de archivos que quieres ignorar
